--- a/roles/maubot/templates/config.yaml
+++ b/roles/maubot/templates/config.yaml
@@ -23,7 +23,7 @@ server:
     hostname: 0.0.0.0
     port: 87
     # Public base URL where the server is visible.
-    public_url: https://maubot.{{ base_url }}
+    public_url: https://bot.{{ base_url }}
     # The base management API path.
     base_path: /_matrix/maubot/v1
     # The base path for the UI.
