Use ansible make module
Implement feedback from code Review / @em0lar

--- a/roles/website/tasks/main.yml
+++ b/roles/website/tasks/main.yml
@@ -26,8 +26,8 @@
     requirements: '{{ website_path }}/requirements.txt'
 
 - name: make html on website
-  command:
-    cmd: make html
+  make:
+    target: html
     chdir: '{{ website_path }}'
   when: website_changed
 
