add matrix client discovery file

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -89,6 +89,12 @@ nginx_vhosts:
           root   /var/www;
       }
 
+      location ^~/.well-known/matrix {
+          default_type "application/json";
+          root   /var/www;
+      }
+
+
   - listen: "82"  # Wiki
     server_name: "_"
     root: "/var/www/dokuwiki"
