--- a/roles/maubot/tasks/main.yml
+++ b/roles/maubot/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: Install python3.7
+  apt:
+    name:
+      - "python3.7"
+      - "python3.7-venv"
+
 - name: Create user
   user:
     name: "maubot"
@@ -18,7 +24,7 @@
     name: "maubot"
     extra_args: "--upgrade"
     virtualenv: "/opt/venvs/maubot"
-    virtualenv_command: "/usr/bin/python3 -m venv"
+    virtualenv_command: "/usr/bin/python3.7 -m venv"
   become: yes
   become_user: "maubot"
   notify:
