update synapse, riot, traefik and submodules

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -55,7 +55,7 @@ synapse_enable_group_creation: true
 synapse_enable_registration: true
 synapse_domain: "{{ base_url }}"
 synapse_server_fqdn_matrix: "matrix.{{ synapse_domain }}"
-synapse_pip_version: "1.14.0"
+synapse_pip_version: "1.15.2"
 synapse_auto_join_rooms:
   - "#grosse_halle:{{ base_url }}"
   - "#allgemein:{{ base_url }}"
@@ -74,7 +74,7 @@ synapse_app_service_config_files:
   - /etc/matrix-appservice-irc/appservice-registration-irc.yaml
 
 riot_installation_path: "/var/www/riot-web"
-riot_version: "1.6.2"
+riot_version: "1.6.8"
 
 # TODO: setup appservices
 #synapse_app_service_config_files:
@@ -238,8 +238,8 @@ dokuwiki_local:
 
 redis_requirepass: "{{ lookup('passwordstore', 'infra/redis') }}"
 
-pretix_version: "3.7.0"
-pretix_bind_address: "0.0.0.0:83" # TODO: Change to 127.0.0.1 when traefik is not running in docker anymore
+pretix_version: "3.9.0"
+pretix_bind_address: "127.0.0.1:83" 
 pretix_base_path: "/opt/pretix"
 pretix_config_path: "/etc/traefik"
 pretix_gunicorn_worker: 2
