--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "roles/em0lar.oh-my-zsh"]
 	path = roles/em0lar.oh-my-zsh
 	url = https://git.labcode.dev/ansible_roles/oh-my-zsh.git
+[submodule "roles/systemli.coturn"]
+	path = roles/systemli.coturn
+	url = https://github.com/systemli/ansible-role-coturn
