Fixed old stupid things and corrected one wrong path
* changed pretix config path
* add minute to traefik-certificate-exporter to not run the export every
minute past hour 2
* corrected path of matrix-appservice-irc template

--- a/group_vars/all/pretix.yml
+++ b/group_vars/all/pretix.yml
@@ -2,7 +2,7 @@
 pretix_version: "3.9.0"
 pretix_bind_address: "0.0.0.0:83"
 pretix_base_path: "/opt/pretix"
-pretix_config_path: "/etc/traefik"
+pretix_config_path: "/etc/pretix"
 pretix_gunicorn_worker: 2
 pretix_celery_concurrency: 4
 pretix_pretix_instance_name: "{{ base_url }} Pretix"
