--- a/group_vars/all/matrix.yml
+++ b/group_vars/all/matrix.yml
@@ -31,6 +31,13 @@ synapse_federation_listener_port: '86'
 synapse_app_service_config_files:
   - /etc/matrix-appservice-irc/appservice-registration-irc.yaml
 
+synapse_turn_uris:
+  - "turn:{{ coturn_realm }}:3479?transport=udp"
+  - "turn:{{ coturn_realm }}:3479?transport=tcp"
+
+synapse_turn_shared_secret: "{{ coturn_static_auth_secret }}"
+synapse_turn_allow_guests: True
+
 # Riot
 riot_installation_path: "/var/www/riot-web"
 riot_version: "1.6.8"
