--- a/group_vars/web.yml
+++ b/group_vars/web.yml
@@ -6,3 +6,8 @@ firewall_ports:
   - 8080/tcp
   - 64738/udp
   - 64738/tcp
+  - 3478/udp
+  - 3478/tcp
+  - 5349/udp
+  - 5349/tcp
+  - 49152-65535/udp
