--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -73,6 +73,12 @@
     - geerlingguy.java
     - em0lar.keycloak
     - mrlesmithjr.openldap
+  tasks:
+    - name: deploy custom keycloak-theme
+      git:
+        repo: 'https://github.com/chaos-jetzt/cj-keycloak-theme.git'
+        dest: "{{ keycloak_jboss_home }}/themes/cj-keycloak-theme"
+      notify: restart keycloak
   tags: keycloak
 
 - hosts: web
