Add freescout helpdesk and mysql
Deploy freescout-helpdesk[^1] under `support.{{ base-url }}` using our new
freescout ansible role[^2]. As freescout didn't used to play nicely with
postgres[^3], as of the time when I started implementing it, this commit
also adds MySQL using geerlingguys role[^4].

At the moment freescout listens to the `support` subdomain, but this
could be changed if there are any different proposals.

Close #6

[^1]: github.com/freescout-helpdesk/freescout
[^2]: https://github.com/chaos-jetzt/ansible-role-freescout
[^3]: https://github.com/freescout-helpdesk/freescout/issues/654
[^4]: https://github.com/geerlingguy/ansible-role-mysql

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,9 @@
 [submodule "roles/systemli.coturn"]
 	path = roles/systemli.coturn
 	url = https://github.com/systemli/ansible-role-coturn
+[submodule "roles/geerlingguy.mysql"]
+	path = roles/geerlingguy.mysql
+	url = https://github.com/geerlingguy/ansible-role-mysql.git
+[submodule "roles/chaos-jetzt.freescout"]
+	path = roles/chaos-jetzt.freescout
+	url = https://github.com/chaos-jetzt/ansible-role-freescout.git
