--- a/group_vars/all/keycloak.yml
+++ b/group_vars/all/keycloak.yml
@@ -3,7 +3,7 @@ keycloak_postgresql_password: "{{ lookup('passwordstore', 'infra/keycloak/db') }
 keycloak_postgresql_database: "keycloak"
 
 keycloak_configure_firewall: false
-keycloak_url: "sso.{{ base_url }}"
+keycloak_external_url: "sso.{{ base_url }}"
 keycloak_http_port: 8081
 keycloak_welcome_theme: "cj-keycloak-theme"
 keycloak_profile_preview: true
