--- a/group_vars/web.yml
+++ b/group_vars/web.yml
@@ -7,6 +7,8 @@ firewall_ports:
   - 64738/tcp
   - 3478/udp
   - 3478/tcp
+  - 3479/udp
+  - 3479/tcp
   - 5349/udp
   - 5349/tcp
   - 49152-65535/udp
