--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "roles/jnv.unattended-upgrades"]
 	path = roles/jnv.unattended-upgrades
 	url = https://github.com/jnv/ansible-role-unattended-upgrades
-[submodule "roles/docker"]
-	path = roles/docker
-	url = https://git.labcode.dev/ansible_roles/docker
 [submodule "roles/base"]
 	path = roles/base
 	url = https://github.com/n0emis/ansible-role-base
@@ -58,3 +55,12 @@
 [submodule "roles/chaos-jetzt.freescout"]
 	path = roles/chaos_jetzt.freescout
 	url = https://github.com/chaos-jetzt/ansible-role-freescout.git
+[submodule "roles/geerlingguy.docker"]
+	path = roles/geerlingguy.docker
+	url = https://github.com/geerlingguy/ansible-role-docker
+[submodule "roles/n0emis.bigbluebutton"]
+	path = roles/n0emis.bigbluebutton
+	url = https://github.com/n0emis/ansible-role-bigbluebutton
+[submodule "roles/chaos_jetzt.venueless"]
+	path = roles/chaos_jetzt.venueless
+	url = https://github.com/chaos-jetzt/ansible-role-venueless
