--- a/group_vars/all/dokuwiki.yml
+++ b/group_vars/all/dokuwiki.yml
@@ -79,9 +79,9 @@ dokuwiki_additonal_configuration:
     value: "1"
   - name: "plugin>legalnotice>text"
     value: |
-      'Ab dem 10.10. ist der Login nur noch über Kecloak möglich. Bis dahin müssen alle bestehnden Accounts umgezogen werden.
+      'Ab dem 10.10. ist der Login nur noch über Keycloak möglich. Bis dahin müssen alle bestehenden Accounts umgezogen werden.
   
-      Erstellt euch dafür einen Account auf [[https://sso.chaos.jetzt]], meldet euch mit euren alten Zugansdaten hier an, navigiert in euer **Benutzerprofil** und aktiviert unter **Mit anderen Services anmelden:** keykloak. Nun könnt ihr euch abmelden und via Keykloak anmelden.'
+      Erstellt euch dafür einen Account auf [[https://sso.chaos.jetzt]], meldet euch mit euren alten Zugangsdaten hier an, navigiert in euer **Benutzerprofil** und aktiviert unter **Mit anderen Services anmelden:** Keycloak. Ab dann könnt ihr euch mit Keycloak anmelden.'
 #  - name: "plugin>oauth>singleService"
 #    value: "'Keycloak'"
 
