create variable to store the base url for our sso

--- a/group_vars/all/dokuwiki.yml
+++ b/group_vars/all/dokuwiki.yml
@@ -70,11 +70,11 @@ dokuwiki_additonal_configuration:
   - name: "plugin>oauth>keycloak-key"
     value: "'wiki'"
   - name: "plugin>oauth>keycloak-authurl"
-    value: "'https://sso.chaos.jetzt/auth/realms/chaos-jetzt/protocol/openid-connect/auth'"
+    value: "'{{ sso_base_url }}/protocol/openid-connect/auth'"
   - name: "plugin>oauth>keycloak-tokenurl"
-    value: "'https://sso.chaos.jetzt/auth/realms/chaos-jetzt/protocol/openid-connect/token'"
+    value: "'{{ sso_base_url }}/protocol/openid-connect/token'"
   - name: "plugin>oauth>keycloak-userinfourl"
-    value: "'https://sso.chaos.jetzt/auth/realms/chaos-jetzt/protocol/openid-connect/userinfo'"
+    value: "'{{ sso_base_url }}/protocol/openid-connect/userinfo'"
   - name: "plugin>oauth>register-on-auth"
     value: "1"
   - name: "plugin>legalnotice>text"
