--- a/group_vars/all/dokuwiki.yml
+++ b/group_vars/all/dokuwiki.yml
@@ -79,7 +79,7 @@ dokuwiki_additonal_configuration:
     value: "1"
   - name: "plugin>legalnotice>text"
     value: |
-      'Ab dem 10.10. ist der Login nur noch über Keycloak möglich. Bis dahin müssen alle bestehenden Accounts umgezogen werden.
+      'Ab dem 21.10.2020 ist der Login nur noch über Keycloak möglich. Bis dahin müssen alle bestehenden Accounts umgezogen werden.
   
       Erstellt euch dafür einen Account auf [[https://sso.chaos.jetzt]], meldet euch mit euren alten Zugangsdaten hier an, navigiert in euer **Benutzerprofil** und aktiviert unter **Mit anderen Services anmelden:** Keycloak. Ab dann könnt ihr euch mit Keycloak anmelden.'
 #  - name: "plugin>oauth>singleService"
