--- a/group_vars/all/louketo.yml
+++ b/group_vars/all/louketo.yml
@@ -3,7 +3,7 @@ louketo_instances:
   - name: freescout
     config: |
       client-id: freescout
-      discovery-url: https://sso.chaos.jetzt/auth/realms/chaos-jetzt
+      discovery-url: {{ sso_base_url }}
       enable-default-deny: false
       listen: 127.0.0.1:{{ freescout_louketo_port }}
       upstream-url: http://localhost:{{ freescout_nginx_port }}
