Switch freescout to PostgresSQL
Note: I would recommend, while I dont know for certain, to remove
freescout entirely from your system. Synce the switch of a database
leads to TOTAL LOSS OF DATA, this shouldn't make a difference.

--- a/group_vars/all/freescout.yml
+++ b/group_vars/all/freescout.yml
@@ -23,11 +23,11 @@ freescout_config:
   - name: app_force_https
     value: "true"
   - name: db_connection
-    value: mysql
+    value: pgsql
   - name: db_host
     value: localhost
   - name: db_port
-    value: 3306
+    value: 5432
   - name: db_database
     value: "{{ freescout_db_database }}"
   - name: db_username
