--- a/group_vars/all/php.yml
+++ b/group_vars/all/php.yml
@@ -5,5 +5,5 @@ php_enable_php_fpm: true
 php_use_managed_ini: true
 php_default_version_debian: "7.4"
 php_packages_extra:
-  - php7.4-mysql
+  - php7.4-pgsql
   - php7.4-zip
